# pulumi-python-poetry-monorepo

./: README.md  python-monorepo.code-workspace
core/: pyproject.toml
core/core/: __init__.py
project1/: Pulumi.yaml  __main__.py  pyproject.toml
project2/: Pulumi.yaml  __main__.py  pyproject.toml
