[tool.poetry]
name = "core"
version = "0.1.0"
description = "Pulumi component library"
authors = ["Ringo De Smet <ringo@de-smet.name>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pulumi-random = "^4.8.2"
pulumi = ">=3.0.0,<4.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
