[tool.poetry]
name = "project2"
version = "0.1.0"
description = "Pulumi Project 1 using Core"
authors = ["Ringo De Smet <ringo@de-smet.name>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pulumi = ">=3.0.0,<4.0.0"
core = {path = "../core", develop = true}

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
